--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -521,14 +521,10 @@ legend {
     justify-content: center;
 }
 
-.directory #cards img {
-    margin-bottom: 0;
-}
-
 section.card {
     background-color: var(--background-color);
     margin: 2rem;
-    height: 310px;
+    height: 300px;
     width: 25rem;
     padding-bottom: 1rem;
 }
@@ -542,10 +538,35 @@ section.card a {
 }
 
 img.logo {
-    padding: 2rem 1rem 0.25rem;
+    padding: 1.5rem 1rem 0.25rem;
     display: flex;
     margin: auto;
+    margin-bottom: 0;
     height: 200px;
     width: auto;
-    /* min-width: 300px; */
+}
+
+#list {
+    display: flex;
+    padding: 2rem 1rem;
+}
+
+.directory {
+    text-align: center;
+}
+
+section.item {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+section.item p,
+section.item a {
+    width: 25%;
+}
+
+section:nth-child(odd) {
+    background-color: var(--accent-color);
 }
