--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -567,6 +567,8 @@ section.item {
 section.item p,
 section.item a {
     width: 25%;
+    margin: auto 0.5rem;
+    padding: 1rem 0;
 }
 
 #list section:nth-child(odd) {
@@ -583,10 +585,6 @@ h2#title {
 
 .dark-mode h2#title {
     color: white;
-}
-
-#fourth {
-    margin: auto;
 }
 
 #gridview,
