--- a/styles/medium.css
+++ b/styles/medium.css
@@ -10,4 +10,9 @@
     .herolabel p {
         font-size: 1rem;
     }
+
+    figure {
+        display: flex;
+        align-items: center;
+    }
 }
