--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -221,7 +221,6 @@ section.section3 {
 .section2 {
     width: 80%;
     margin: 1rem auto 2rem auto;
-
 }
 
 .section2 p {
@@ -243,7 +242,7 @@ section.section3 {
 
 section h2 {
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.25rem;
     font-family: "Kanit", sans-serif;
     text-align: center;
     border-bottom: 1px solid gray;
@@ -433,7 +432,7 @@ thead th {
     border: thin solid black;
 }
 
-#table-title {
+.table-title {
     background-color: var(--secondary-color);
     color: var(--accent-color);
 }
@@ -448,6 +447,7 @@ tbody tr td {
 
 caption {
     caption-side: bottom;
+    font-size: 1.1rem;
 }
 
 legend {
@@ -479,34 +479,34 @@ legend {
     color: var(--secondary-color);
 }
 
-.dark-mode th,
-.dark-mode td {
+#membership-benefits.dark-mode th,
+#membership-benefits.dark-mode td {
     border: 2px solid white;
 }
 
-.dark-mode thead th {
+#membership-benefits.dark-mode thead th {
     background-color: var(--secondary-color);
     color: var(--accent-color);
     padding: 0.25rem;
 }
 
-.dark-mode tbody tr:nth-child(odd) {
+.dark-mode #membership-benefits tbody tr:nth-child(odd) {
     background-color: var(--accent-color);
 }
 
-.dark-mode tbody tr:nth-child(even) {
+.dark-mode #membership-benefits tbody tr:nth-child(even) {
     background-color: var(--background-color);
 }
 
-.dark-mode table {
+.dark-mode #membership-benefits {
     border: 2px solid white;
 }
 
-.dark-mode #table-title {
+.dark-mode #membership-benefits .table-title {
     background-color: black;
 }
 
-.dark-mode caption {
+.dark-mode #membership-benefits caption {
     color: var(--accent-color);
 }
 
@@ -597,4 +597,30 @@ h2#title {
     margin: 0 1rem;
     background-color: var(--accent-color);
     font-size: 1.25rem;
+}
+
+#weather-icon {
+    height: 100%;
+    justify-self: left;
+}
+
+figure {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+#weather-info {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto 1rem;
+}
+
+#forecast-table tbody:nth-child(odd) {
+    background-color: white;
+}
+
+.forecast-title {
+    background-color: var(--secondary-color);
 }
