--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1001px) {
     header {
         display: flex;
         align-items: center;
@@ -385,5 +385,12 @@
 
     section.card {
         width: 25rem;
+    }
+
+    #forecast-table {
+        height: auto;
+        width: 90%;
+        margin: auto;
+        margin-bottom: 1rem;
     }
 }
