--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 650px) and (max-width: 1079px) {
+@media screen and (min-width: 650px) and (max-width: 1000px) {
     header {
         display: grid;
         grid-template-rows: auto auto;
@@ -244,5 +244,10 @@
     #list {
         display: flex;
         padding: 2rem 4rem;
+    }
+
+    #forecast-table {
+        width: 90%;
+        margin: auto;
     }
 }
