--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -393,4 +393,9 @@
         margin: auto;
         margin-bottom: 1rem;
     }
+
+    #banner {
+        padding: 1rem;
+        font-size: 1.25rem;
+    }
 }
