--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -250,4 +250,9 @@
         width: 90%;
         margin: auto;
     }
+
+    #banner {
+        padding: 1rem;
+        font-size: 1.25rem;
+    }
 }
