Fixed dark-mode slider conflict with banner

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -36,7 +36,7 @@
     }
 
     .switch {
-        top: 1.5rem;
+        top: 2.5rem;
         right: 2%;
         width: 46px;
         height: 28px;
@@ -387,9 +387,9 @@
         margin-bottom: 1rem;
     }
 
-    #banner {
-        padding: 1rem;
-        font-size: 1.25rem;
+    #banner h3 {
+        padding: 1.25rem;
+        font-size: 1.5rem;
     }
 
     #weather-info {
