--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -14,6 +14,7 @@ header {
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    position: relative;
 }
 
 header img {
@@ -82,10 +83,12 @@ nav a {
 
 .switch {
     position: absolute;
-    top: 4rem;
+    transform: translateY(-50%);
+    top: 4.75rem;
     right: 6%;
     width: 36px;
     height: 22px;
+    z-index: 1001;
 }
 
 .switch input {
@@ -628,10 +631,10 @@ figure {
 
 #banner {
     position: sticky;
+    top: 0;
     background-color: var(--accent-color);
     padding: 0.25rem;
     text-align: center;
-    font-size: 1rem;
     z-index: 1000;
     font-family: 'Karla', sans-serif;
 }
@@ -640,6 +643,7 @@ figure {
     width: 80%;
     margin: 1rem auto;
     color: var(--secondary-color);
+    font-size: 1rem;
 }
 
 #banner.close {
