--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 951px) {
     header {
         display: flex;
         align-items: center;
@@ -55,6 +55,7 @@
 
     .hero-section {
         width: 100%;
+        margin-bottom: 0.25rem;
     }
 
     #action {
@@ -76,10 +77,6 @@
         display: none;
     }
 
-    .hero-section {
-        margin-bottom: 2rem;
-    }
-
     #hero {
         margin-bottom: 2rem;
         height: 80vh;
@@ -94,23 +91,23 @@
     .section1,
     .section2,
     .section3 {
-        width: 80%;
         margin: 2rem;
         font-size: 1.25rem;
         margin: auto;
+        padding: 0 1rem;
     }
 
     .site-content {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin: 0 5rem 0 5rem;
+        margin: 0 4.5rem;
     }
 
     .section1 {
         grid-column: 1/2;
         margin-top: 1rem;
-        margin-bottom: 1.5rem;
-        width: 75%;
+        margin-bottom: 2rem;
+        width: auto;
         grid-row: 1/3;
     }
 
@@ -119,14 +116,14 @@
         margin: 1rem 0.5rem;
     }
 
-    .events {
+    .businesses {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
         justify-items: center;
     }
 
-    .events img {
+    .businesses img {
         display: grid;
         width: 6.5rem
     }
@@ -181,7 +178,7 @@
     }
 
     section.section3 {
-        margin-top: 2rem;
+        margin-top: 0rem;
         margin-bottom: 3rem;
         padding-top: 0rem;
         padding-bottom: 0rem;
@@ -196,23 +193,16 @@
         display: none;
     }
 
-    .businesses {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+    .events {
+        display: block;
         margin-top: 2rem;
+        width: 85%;
+        margin: 2rem auto auto;
     }
 
-    .business1 {
-        grid-column: 1/2;
+    .event1 {
         margin: auto;
-        width: 75%;
-        padding: 5rem;
-    }
-
-    .business2 {
-        grid-column: 2/3;
-        margin: auto;
-        width: 75%;
+        margin-bottom: 1.5rem;
     }
 
     footer {
@@ -378,6 +368,7 @@
 
     section.card {
         width: 25rem;
+        height: auto;
     }
 
     #forecast-table {
@@ -395,5 +386,36 @@
     #weather-info {
         margin-top: 0.5rem;
         margin-left: 0.5rem;
+    }
+
+    /* .section1 #cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    } */
+
+    .section1 #cards .card {
+        display: grid;
+        grid-template-columns: 1fr 1.75fr;
+        margin: 2rem auto;
+        padding: 1.25rem 1rem;
+        font-size: large;
+    }
+
+    .section1 img {
+        max-height: 140px;
+        margin: auto 0;
+        grid-row: 1/4;
+        margin-left: 0.5rem;
+        padding-right: 0.25rem;
+        padding-top: 0;
+    }
+
+    .section1 p,
+    .section1 a {
+        grid-column: 2/3;
+        text-align: center;
+        margin: auto;
+        width: 90%;
     }
 }
