--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -85,7 +85,7 @@
     }
 
     section h2 {
-        font-size: 2rem;
+        font-size: 1.75rem;
     }
 
     .section1,
@@ -150,7 +150,7 @@
         margin-top: 1rem;
         grid-column: 2/3;
         grid-row: 1/2;
-        width: 80%;
+        width: 90%;
     }
 
     .section3 {
@@ -184,13 +184,19 @@
     .events {
         display: block;
         margin-top: 2rem;
-        width: 85%;
-        margin: 2rem auto auto;
+        width: 90%;
+        margin: 1rem auto auto;
     }
 
-    .event1 {
+    .events h3 {
+        margin-bottom: 0.5rem;
+    }
+
+    .event1,
+    .event2 {
         margin: auto;
         margin-bottom: 1.5rem;
+        font-size: 1rem;
     }
 
     footer {
@@ -376,25 +382,18 @@
         margin-left: 0.5rem;
     }
 
-    /* .section1 #cards {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    } */
-
     .section1 #cards .card {
         display: grid;
         grid-template-columns: 1fr 1.75fr;
-        margin: 2rem auto;
-        padding: 1.25rem 1rem;
+        margin: 3rem auto;
+        padding: 1.5rem 1rem;
         font-size: large;
     }
 
     .section1 img {
-        max-height: 140px;
+        max-height: 150px;
         margin: auto 0;
         grid-row: 1/4;
-        margin-left: 0.5rem;
         padding-right: 0.25rem;
         padding-top: 0;
     }
