--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -73,7 +73,7 @@
         padding-bottom: 1.5rem;
     }
 
-    #menu {
+    .menu {
         display: none;
     }
 
@@ -320,7 +320,7 @@
         margin: 0;
     }
 
-    #contact-info {
+    #user-info {
         padding: 1.5rem;
         background: #cfcfcf;
     }
@@ -348,7 +348,7 @@
         padding: 0.5rem;
     }
 
-    #list {
+    .list {
         display: flex;
         padding: 2rem 4rem;
     }
@@ -375,7 +375,7 @@
         margin-left: 0.5rem;
     }
 
-    .spotlights #cards .card {
+    .spotlights .cards .card {
         display: grid;
         grid-template-columns: 1fr 1.75fr;
         margin: 3rem auto;
