--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -98,7 +98,7 @@
         margin-top: 2.5rem;
     }
 
-    #menu {
+    .menu {
         display: none;
     }
 
@@ -181,7 +181,7 @@
         width: 90%;
     }
 
-    #contact-info,
+    #user-info,
     #business-info {
         padding: 0;
     }
@@ -241,7 +241,7 @@
         color: var(--secondary-color);
     }
 
-    #list {
+    .list {
         display: flex;
         padding: 2rem 4rem;
     }
@@ -256,7 +256,7 @@
         padding: 1rem;
     }
 
-    .spotlights #cards .card {
+    .spotlights .cards .card {
         width: 80%;
     }
 
