--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -343,7 +343,7 @@ main.dark-mode {
     width: 70%;
     padding: 4%;
     text-align: center;
-    margin-left: 10%;
+    margin-left: auto;
     margin-right: auto;
 }
 
@@ -361,8 +361,21 @@ main.dark-mode {
     text-align: center;
 }
 
+.event-list {
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    background-color: var(--background-color);
+    padding: 2% 4%;
+}
+
+.event-list p {
+    margin-bottom: 2rem;
+}
+
 #lastVisit {
     text-align: center;
+    padding: 1rem 0 0.75rem;
 }
 
 .dark-mode .right-content,
