--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -252,10 +252,8 @@
         display: block;
         display: flex;
         flex-direction: column;
-        order: -1;
-        width: 90%;
+        width: 95%;
         margin-left: auto;
-        margin-right: 7%;
     }
 
     #lastVisit {
@@ -293,7 +291,7 @@
     .city-council {
         grid-column: 1/2;
         margin-top: 1rem;
-        margin-left: 10%;
+        margin-bottom: 1rem;
     }
 
     .city-council p {
