--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -5,15 +5,29 @@
     --background-color: #cfcfcf;
 }
 
+#banner {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    text-align: center;
+}
+
+#banner.close {
+    display: none;
+}
+
 header {
     background-color: var(--primary-color);
-    display: flex;
-    flex-direction: row;
+    position: relative;
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
 }
 
 nav {
     width: 100%;
+    display: block;
+    grid-column: 1/4;
 }
 
 nav a {
@@ -24,14 +38,20 @@ nav a {
     display: none;
     text-align: center;
     font-weight: bold;
+    padding: 0.3rem;
+}
+
+.open a {
+    display: block;
 }
 
 .menu {
     background: none;
     border: none;
     position: absolute;
-    top: 1rem;
-    right: 5%;
+    left: 85%;
+    top: 10px;
+    margin-top: 1rem;
     font-size: 2.5rem;
     color: var(--accent-color);
 }
@@ -44,32 +64,47 @@ nav a {
     content: "✖";
 }
 
-.open a {
-    display: block;
-}
-
-nav a {
-    text-align: center;
-    text-decoration: none;
-    width: 100%;
-}
-
-nav a.active {
-    font-weight: bold;
-    background-color: var(--accent-color);
-    color: var(--primary-color);
-}
-
-
 .logo {
-    width: 75px;
-    padding: 0.5rem;
-    height: 100%;
+    width: 125px;
+    padding: 0.75rem;
+    grid-column: 2/3;
+    margin: auto;
+}
+
+.hero {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .hero img {
     width: 100%;
     height: auto;
+}
+
+.hero-button {
+    position: absolute;
+    font-size: 1rem;
+    z-index: 10;
+    color: var(--accent-color);
+    font-weight: bold;
+    background-color: rgb(237, 182, 128, 0.9);
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 0.5rem;
+    top: 40%;
+}
+
+h1 {
+    position: absolute;
+    font-size: 1.5rem;
+    z-index: 10;
+    color: white;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-shadow: 2px 2px var(--accent-color);
 }
 
 footer {
