--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:ital@1&family=Short+Stack&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Short+Stack&display=swap');
 
 :root {
     --primary-color: #D8786D;
