--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -8,13 +8,15 @@
     --main-font: "Short Stack";
 }
 
-main {
+body {
     font-family: var(--main-font);
+    width: 100%;
 }
 
 h1,
 h2,
-h3 {
+h3,
+nav {
     font-family: var(--header-font);
 }
 
@@ -23,10 +25,23 @@ h3 {
     top: 0;
     z-index: 100;
     text-align: center;
+    background-color: var(--accent-color);
+    padding: 0.75rem;
+    color: var(--secondary-color);
 }
 
 #banner.close {
     display: none;
+}
+
+#bannerButton {
+    position: absolute;
+    background-color: var(--secondary-color);
+    right: 45px;
+    top: 25px;
+    color: var(--accent-color);
+    font-weight: bold;
+    font-size: 1.25rem;
 }
 
 header {
@@ -47,7 +62,7 @@ nav a {
     text-decoration: none;
     color: var(--accent-color);
     background-color: var(--secondary-color);
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     display: none;
     text-align: center;
     font-weight: bold;
@@ -62,7 +77,7 @@ nav a {
     background: none;
     border: none;
     position: absolute;
-    left: 85%;
+    right: 35px;
     top: 10px;
     margin-top: 1rem;
     font-size: 2.5rem;
@@ -98,15 +113,29 @@ nav a {
 
 .hero-button {
     position: absolute;
-    font-size: 1rem;
+    font-size: 0.9rem;
     z-index: 10;
     color: var(--accent-color);
     font-weight: bold;
     background-color: rgb(237, 182, 128, 0.9);
     text-decoration: none;
     border-radius: 10px;
-    padding: 0.5rem;
+    padding: 0.75rem;
     top: 40%;
+    margin: 0.75rem;
+}
+
+main {
+    text-align: center;
+}
+
+.main-content {
+    width: 75%;
+    margin: auto;
+}
+
+.main-content p {
+    margin-bottom: 2rem;
 }
 
 h1 {
@@ -118,26 +147,78 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     text-shadow: 2px 2px var(--accent-color);
+    width: 75%;
+}
+
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 1rem;
+}
+
+#weather {
+    background-color: var(--secondary-color);
+    width: 75%;
+    margin: auto;
+    padding: 0.65rem;
+    border-radius: 10px;
+    margin-bottom: 2.5rem;
+}
+
+#weather h2 {
+    margin-bottom: 5px;
+}
+
+#title-icon {
+    display: flex;
+    justify-content: center;
+}
+
+#temp-desc {
+    margin-top: 0;
 }
 
 footer {
     background-color: var(--primary-color);
     margin-top: 1rem;
-    display: flex;
-    flex-direction: row;
-    padding: 0.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1.25fr;
+    grid-template-rows: 2fr 1fr;
+    padding: 0.75rem;
+    text-align: center;
+}
+
+footer .logo {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin: auto;
+}
+
+.footer-contact {
+    grid-column: 2/3;
+    font-size: 16px;
+    grid-row: 1/2;
+    width: 90%;
+}
+
+.site-details {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    display: block;
+    width: 95%;
+    margin: auto;
+}
+
+.social-media {
+    width: 100%;
 }
 
 #facebook,
 #instagram,
 #twitter {
-    width: 45px;
-    padding: 0.25rem;
-    align-items: center;
-}
-
-.media-icons {
-    display: flex;
-    flex-direction: column;
-    margin-left: 80%;
+    width: 40px;
+    margin: 5px;
+    grid-column: 1/3;
 }
