--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -1,10 +1,34 @@
 @media screen and (min-width: 951px) {
 
-    header {
-        display: flex;
+    #banner h3 {
+        font-size: 1.15rem;
     }
 
-    nav a {
-        background-color: var(--primary-color)
+    h1 {
+        font-size: 2rem;
+        text-shadow: 4px 4px 2px var(--accent-color);
+    }
+
+    #weather {
+        width: 50%;
+    }
+
+    footer {
+        grid-template-columns: repeat(4, 1fr);
+        margin: auto;
+    }
+
+    .footer-contact {
+        grid-column: 3/4;
+        width: 100%;
+    }
+
+    footer .logo {
+        grid-column: 2/3;
+        width: 165px;
+    }
+
+    .site-details {
+        grid-column: 2/4;
     }
 }
