--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -13,6 +13,57 @@
         width: 50%;
     }
 
+    #rentals {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 2rem;
+    }
+
+    #reservations h2 {
+        width: 80%;
+        margin: 3.5rem auto 0;
+        font-size: 1.5rem;
+    }
+
+    #reservations ul {
+        margin-top: 6.5rem;
+        font-size: 1.25rem;
+    }
+
+    #contact {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #contact p,
+    #contact ul {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    #contact p:first-of-type {
+        margin-top: 2rem;
+    }
+
+    #contact ul {
+        margin-top: 5rem;
+    }
+
+    #contact li {
+        margin: 1rem 1.5rem;
+    }
+
+    #contact-us {
+        grid-column: 1/2;
+    }
+
+    #contact iframe {
+        grid-column: 1/3;
+        width: 60%;
+        margin-bottom: 3rem;
+        margin-top: 1rem;
+    }
+
     footer {
         grid-template-columns: repeat(4, 1fr);
         margin: auto;
