--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -11,6 +11,7 @@
 
     #weather {
         width: 50%;
+        grid-column: 1/3;
     }
 
     #rentals {
@@ -55,6 +56,38 @@
 
     #contact-us {
         grid-column: 1/2;
+    }
+
+    .main-content {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        grid-gap: 1rem;
+        column-gap: 3rem;
+        /* color: var(--secondary-color); */
+    }
+
+    .left-content {
+        grid-column: 1/2;
+        margin-top: 1.5rem;
+    }
+
+    .right-content {
+        grid-column: 2/3;
+        margin-top: 2.75rem;
+        background-color: var(--background-color);
+        padding: 1rem;
+        border: 3px solid var(--primary-color);
+        border-radius: 10px;
+        height: 75%;
+        width: 100%;
+    }
+
+    .right-content p {
+        margin-bottom: 0;
+    }
+
+    .right-content h2 {
+        margin-top: 0.5rem;
     }
 
     #contact iframe {
