--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -1,10 +1,10 @@
-@media screen and (min-width: 951px) {
+@media screen and (min-width: 901px) {
 
     #banner h3 {
         font-size: 1.15rem;
     }
 
-    h1 {
+    .hero h1 {
         font-size: 2rem;
         text-shadow: 4px 4px 2px var(--accent-color);
     }
@@ -20,6 +20,16 @@
         padding: 2rem;
     }
 
+    #rentals h1 {
+        grid-column: 1/3;
+        margin: 1.5rem 0rem;
+        font-size: 1.75rem;
+    }
+
+    #reservations fieldset:first-of-type {
+        margin: 2.5rem auto;
+    }
+
     #reservations h2 {
         width: 80%;
         margin: 3.5rem auto 0;
@@ -29,6 +39,13 @@
     #reservations ul {
         margin-top: 6.5rem;
         font-size: 1.25rem;
+    }
+
+    #reservations img {
+        width: 475px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 1.5rem;
     }
 
     #contact {
