--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -15,9 +15,10 @@
 
     }
 
-    h1 {
+    .hero h1 {
         grid-column: 2/3;
         grid-row: 1/2;
+        font-size: 1.5rem;
     }
 
 
@@ -33,10 +34,6 @@
         margin: auto;
     }
 
-    h1 {
-        font-size: 1.5rem;
-    }
-
     .hero-button {
         font-size: 1.15rem;
         margin: 0;
@@ -45,12 +42,20 @@
 
     #rentals table {
         width: 80%;
-        margin: 2.5rem auto;
+        margin: 1.25rem auto 2.5rem;
+    }
+
+    #rentals h1 {
+        margin-top: 2.5rem;
+        color: var(--accent-color);
+        padding-bottom: 0;
+        font-size: 1.5rem;
     }
 
     #reservations {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1.25fr;
+        grid-template-rows: auto auto;
     }
 
     #reservations fieldset {
@@ -64,22 +69,32 @@
     }
 
     #reservations ul {
-        margin-top: 4rem;
+        margin-top: 6rem;
+        margin-bottom: 0;
+        padding-left: 1rem;
     }
 
     #reservations form {
         grid-column: 1/2;
-        grid-row: 1/2;
+        grid-row: 1/3;
         width: 100%;
     }
 
     #reservations h2 {
         width: 85%;
-        margin: 2.5rem auto;
+        margin: 2rem auto 1rem;
     }
 
-    #reservations ul {
-        margin-top: 6.5rem;
+    #reservations li {
+        padding: 3px;
+        font-size: 16px;
+    }
+
+    #reservations img {
+        width: 95%;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin-right: auto;
     }
 
     #contact-us {
@@ -90,4 +105,6 @@
     #contact-us textarea {
         width: 70%;
     }
+
+
 }
