--- a/scoots/styles/larger.css
+++ b/scoots/styles/larger.css
@@ -30,7 +30,7 @@
         margin: 2.5rem auto;
     }
 
-    #reservations h2 {
+    #reservations h1 {
         width: 80%;
         margin: 3.5rem auto 0;
         font-size: 1.5rem;
@@ -60,11 +60,12 @@
     }
 
     #contact p:first-of-type {
-        margin-top: 2rem;
+        margin-top: 3rem;
     }
 
     #contact ul {
-        margin-top: 5rem;
+        margin-top: 1rem;
+        margin-left: 1.5rem;
     }
 
     #contact li {
@@ -73,6 +74,17 @@
 
     #contact-us {
         grid-column: 1/2;
+        width: 70%;
+        margin-top: 1.75rem;
+        padding: 1rem;
+    }
+
+    #contact-us fieldset {
+        padding-bottom: 1.5rem;
+    }
+
+    .active {
+        padding: 1.25rem 2rem;
     }
 
     .main-content {
@@ -80,7 +92,6 @@
         grid-template-columns: 1.5fr 1fr;
         grid-gap: 1rem;
         column-gap: 3rem;
-        /* color: var(--secondary-color); */
     }
 
     .left-content {
@@ -107,11 +118,18 @@
         margin-top: 0.5rem;
     }
 
+    #contact h1 {
+        grid-column: 1/3;
+        margin-bottom: 0;
+        margin-top: 3rem;
+        font-size: 1.75rem;
+    }
+
     #contact iframe {
         grid-column: 1/3;
         width: 60%;
         margin-bottom: 3rem;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
     }
 
     footer {
