--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -390,3 +390,9 @@ footer .logo {
     margin: 5px;
     grid-column: 1/3;
 }
+
+footer a:last-of-type {
+    color: var(--accent-color);
+    text-decoration: none;
+    font-weight: bold;
+}
